<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderSummary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resumen_pedido"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recViewPaymentSummary"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtCoste_ActOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/coste"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/btnAccept_ActOrder"
        app:layout_constraintStart_toStartOf="@+id/btnAccept_ActOrder"
        app:layout_constraintTop_toBottomOf="@+id/recViewPaymentSummary" />

    <Button
        android:id="@+id/btnAccept_ActOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:text="@string/pagar"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel_ActOrder"
        app:layout_constraintTop_toBottomOf="@+id/txtCoste_ActOrder" />

    <Button
        android:id="@+id/btnCancel_ActOrder"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:text="@string/comprar_mas"
        app:layout_constraintBottom_toBottomOf="@+id/btnAccept_ActOrder"
        app:layout_constraintEnd_toStartOf="@+id/btnAccept_ActOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnAccept_ActOrder" />

</androidx.constraintlayout.widget.ConstraintLayout>